Fix: table color and text overflow
Add: hover animations

--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@ body {
 }
 table {
     background-color: black;
+    border-color: white;
     border-width: medium;
     border-style: solid;
     border-collapse: collapse;
@@ -43,12 +44,12 @@ th, td {
     border-style: solid;
     padding: 5px;
 }
+table.numbers th:first-child, table.numbers td:first-child {
+    text-align: right;
+}
 li {
     line-height: 1.5;
     margin-bottom: 10px;
-}
-table.numbers th:first-child, table.numbers td:first-child {
-    text-align: right;
 }
 h1, h2, h3, h4, h5, h6 {
     color: white;
@@ -62,6 +63,10 @@ h1, h2, h3, h4, h5, h6 {
     margin-right: auto;
     margin-bottom: 25px;
 }
+@keyframes enlarge {
+    0% {transform: scale(1);}
+    100% {transform: scale(1.1);}
+}
 .avatar {
     box-shadow: 0px 0px 5px 5px orange;
     border-radius: 100%;
@@ -70,21 +75,26 @@ h1, h2, h3, h4, h5, h6 {
     height: 180px;
     margin-bottom: 25px;
 }
+.avatar:hover {
+    animation: enlarge 0.5s both;
+}
 .textBox {
     font-size: large;
     color: white;
     background-color: black;
+    padding: 5px 10px;
     
     border-color: white;
     border-width: thick;
     border-style: solid;
-    margin-bottom: 25px;
-    
-    padding: 5px 10px;
+
     width: 500px;
-    height: 100px;
+    height: fit-content;
+    min-height: 100px;
+
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 25px;
 }
 .button {
     font-family: "Mercy";
@@ -101,6 +111,11 @@ h1, h2, h3, h4, h5, h6 {
     padding: 1px 5px;
     margin-left: auto;
     margin-right: auto;
+}
+.button:hover {
+    color: yellow;
+    border-color: yellow;
+    text-decoration: none;
 }
 .separator { 
     display: grid; 
